--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -30,8 +30,9 @@ dependencies {
 	//p6spy
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
 
-	//mariadb
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	//db
+//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' //mariaDB
+	runtimeOnly 'com.h2database:h2:1.4.200' //h2DB
 
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -46,10 +47,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' //s3
 
 	//jwt
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
-	implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
-	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
